Mobile Links alignment fix

--- a/Grid/grid.css
+++ b/Grid/grid.css
@@ -106,10 +106,6 @@ li a.active {               /* Active Page */
     .hidemobile {
       display: none;
     }
-
-    .link {
-      margin: 0 auto 0 -20%;
-    }
   }
 
 
